tests/rosetta/out/Smalltalk/apply-a-callback-to-an-array-2.out
/workspace/mochi/tests/rosetta/out/Smalltalk/apply-a-callback-to-an-array-2.st:14: parse error, expected '|' or identifier
