tests/rosetta/out/Smalltalk/apply-a-callback-to-an-array-2.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| each x Map r main s |
each := [:xs :f | xs do: [:x |.
f value: x.
].
. ].
Map := [:xs :f | r := {}.
xs do: [:x |.
r := r copyWith: f value: x.
].
.
r. ].
main := [ s := {1. 2. 3. 4. 5}.
each value: s value: [:i | Transcript show: (((i * i) asString)) printString; cr ].
Transcript show: ((Map value: s value: [:i | (i * i) ] asString)) printString; cr. ].
main value.
